# pulumi-awsx

./: .ci-mgmt.yaml  .editorconfig  .gitignore  .golangci.yml  .goreleaser.yml  .mcp.json  .prettierrc  .travis.yml  .upgrade-config.yml  AGENTS.md  CHANGELOG.md  CHANGELOG_OLD.md  CONTRIBUTING.md  DEVELOPING.md  DEVELOPMENT.md  Gopkg.toml  Makefile  Makefile.old  README.md  REVIEW.md  Taskfile.yml  devbox.json  go.mod  go.sum  mise.toml  package.json  plan.md  renovate.json5  schema.json
.codex/: config.toml
.config/: mise.toml
.github/: PULL_REQUEST_TEMPLATE.md
.mk/: build.mk  renovate.mk  test_provider.mk
aws-infra/: Makefile  aws_test.go  cluster.ts  index.ts  network.ts  package.json  tsconfig.json
awsx/: .prettierignore  index.ts  package.json  pulumi-resource-awsx  pulumi-resource-awsx.cmd  resources.ts  role.ts  schema-types.ts  schema.json  tsconfig.json  tslint.json  utils.test.ts  utils.ts  webpack.config.js
awsx-classic/: package.json  tsconfig.json  tslint.json
awsx-legacy/: index.ts  package.json  tsconfig.json  tslint.json
examples/: examples_dotnet_test.go  examples_go_test.go  examples_nodejs_test.go  go.mod  go.sum  (+2 more)
examples-classic/: examples_test.go
sdk/python/: README.md  go.mod  pyproject.toml  setup.py
sdk/python/pulumi_awsx/: README.md  __init__.py  _utilities.py  provider.py  pulumi-plugin.json
sdk/python/pulumi_awsx/apigatewayv2/: __init__.py  _inputs.py  http_api.py
sdk/python/pulumi_awsx/awsx/: __init__.py  _inputs.py
sdk/python/pulumi_awsx/cloudtrail/: __init__.py  _inputs.py  trail.py
sdk/python/pulumi_awsx/cloudwatch/: _inputs.py
sdk/python/pulumi_awsx/ec2/: __init__.py  _enums.py  _inputs.py  default_vpc.py  get_default_vpc.py  outputs.py  vpc.py
sdk/python/pulumi_awsx/ecr/: __init__.py  _enums.py  _inputs.py  build_and_push_image.py  image.py  registry_image.py  repository.py
sdk/python/pulumi_awsx/ecs/: __init__.py  _enums.py  _inputs.py  ec2_service.py  ec2_task_definition.py  fargate_service.py  fargate_task_definition.py
sdk/python/pulumi_awsx/ecsx/: __init__.py  _inputs.py  fargate_service.py  fargate_task_definition.py
sdk/python/pulumi_awsx/iam/: __init__.py  _inputs.py
sdk/python/pulumi_awsx/lb/: __init__.py  _inputs.py  application_load_balancer.py  network_load_balancer.py  target_group_attachment.py
sdk/python/pulumi_awsx/resource/: _inputs.py
sdk/python/pulumi_awsx/s3/: _inputs.py
sdk/python/pulumi_awsx/vpc/: __init__.py  _enums.py  default_vpc.py  get_default_vpc.py  vpc.py
(+1189 files in other folders)
